--- a/src/app/my-home/sidebar/sidebar.component.html
+++ b/src/app/my-home/sidebar/sidebar.component.html
@@ -20,73 +20,31 @@
             <span class="ms-3 text-lg">Create</span>
          </a>
       </li>
-      <li class="rounded-lg hover:bg-btnSecondaryHover w-40"> 
-         <a href="/user/home" class="flex flex-row justify-center p-2 text-textColSecondary group">
-            <svg
-                  class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75 "
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-                  <path
-                  d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
-            </svg>
-            <span class="ms-3 text-lg whitespace-nowrap">Home</span>
-         </a>
-      </li>
 
-      <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-         <a href="/user/home" class="flex flex-row justify-center p-2 text-textColSecondary group">
-            <svg class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75" xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512">
-            <path
-                  d="M256 0c17.7 0 32 14.3 32 32V66.7C368.4 80.1 431.9 143.6 445.3 224H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H445.3C431.9 368.4 368.4 431.9 288 445.3V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V445.3C143.6 431.9 80.1 368.4 66.7 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H66.7C80.1 143.6 143.6 80.1 224 66.7V32c0-17.7 14.3-32 32-32zM128 256a128 128 0 1 0 256 0 128 128 0 1 0 -256 0zm128-80a80 80 0 1 1 0 160 80 80 0 1 1 0-160z" />
-            </svg>
-            <span class="text-lg ms-3 whitespace-nowrap">Locations</span>
-         </a>
-      </li>
-
-      <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-         <a href="/user/items" class="flex flex-row justify-center p-2 text-textColSecondary group">
-            <svg
-                  class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                  <path
-                  d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
-            </svg>
-            <span class="text-lg ms-3 whitespace-nowrap">Search</span>
-         </a>
-      </li>
-
-      <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-         <a href="/user/profile" class="flex flex-row justify-center p-2 text-textColSecondary group">
-            <svg
-                  class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                  <path
-                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
-            </svg>
-            <span class="text-lg ms-3 whitespace-nowrap">Profile</span>
-         </a>
-      </li>
-      <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-         <a href="#" class="flex flex-row justify-center p-2 text-textColSecondary group">
-            <svg
-                  class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                  <path
-                  d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
-            </svg>
-            <span class="text-lg ms-3 whitespace-nowrap">Tools</span>
-         </a>
-      </li>
-      <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-         <a (click)="signOut()" class="flex flex-row justify-center p-2 text-textColSecondary group cursor-pointer">
-            <svg
-                  class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                  <path
-                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z" />
-            </svg>
-            <span class="text-lg ms-3 whitespace-nowrap">Sign Out</span>
-         </a>
+      <li *ngFor="let item of sidebarListItem" class="rounded-lg hover:bg-btnSecondaryHover w-40">
+         <ng-container *ngIf="item.name != 'Sign Out'">
+            <a  href="{{item.hrefLink}}" class="flex flex-row justify-center p-2 text-textColSecondary group">
+               <svg class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75 "
+               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path [attr.d]="item.iconPath"  />
+   
+               </svg>
+              
+               <span class="ms-3 text-lg whitespace-nowrap">{{item.name}}</span>
+            </a>
+         </ng-container>
+        
+         <ng-container *ngIf="item.name === 'Sign Out'">
+            <a  (click)="signOut()" class="cursor-pointer flex flex-row justify-center p-2 text-textColSecondary group">
+               <svg class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75 "
+               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path [attr.d]="item.iconPath"  />
+   
+               </svg>
+              
+               <span class="ms-3 text-lg whitespace-nowrap">{{item.name}}</span>
+            </a>
+         </ng-container>
       </li>
    </ul>
 </div>
